<resources>
    <string name="app_name">"GoalPop"</string>
    <string name="goal_input_label">Goal Name</string>
    <string name="fab_addGoal_content_desc">Add a new goal</string>
    <string name="helpBttn_content_desc">Get Help</string>
    <string name="delete_bttn_content_desc">Delete all goals</string>
    <string name="goal_importance">Goal Importance:</string>
    <string name="goal_difficulty">Goal Difficulty:</string>
    <string name="goal_description">Goal Description:</string>
    <string name="add_goal">Add Goal</string>
    <string name="create_goal">Create Goal</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="save_button_text">Save</string>
    <string name="balloon_button_description">Edit</string>
    <string name="faq">FAQ</string>
    <string name="question1">How do I create a goal?</string>
    <string name="question2">How do I edit a goal?</string>
    <string name="question3">How do I complete or remove a goal?</string>
    <string name="question4">How do the bubbles on the Visual Tab signify goals?</string>
    <string name="answer1">Click the ‘+’ button on the bottom right corner
        of the either tab to create a new goal. Add a name for a goal, and
        rate the importance and expected difficulty of the goal, with 5
        being most important/difficult. If desired, add further description.
        When finished, click the ‘Add Goal’ button to create the goal "bubble"
        on the visual tab.</string>
    <string name="answer2">Click on a bubble in the Visuab Tab to see its name, and click
        the edit button to update the goal.</string>
    <string name="answer3">Long click on a bubble in the Visual Tab for options to complete or delete the goal.
        When you complete a goal, it will be marked as completed on the List Tab.</string>
    <string name="answer4">The color and size of the bubble will illustrate the goal’s
        importance and difficulty rating. The larger and darker the bubble equates with
        a higher the importance and difficulty rating.</string>
    <string name="importance_rating">Importance Rating:</string>
    <string name="difficulty_rating">Difficulty Rating:</string>
    <string name="name">Name</string>



    <string name="tab1_text">Visual</string>
    <string name="tab2_text">List</string>
    <string name="description">Description</string>
</resources>