<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".FAQActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/mainColor">
    </LinearLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/app_name"
        android:textColor="@color/mainColor"
        android:textSize="38sp"/>

    <TextView
        android:id="@+id/faqTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="46sp"
        android:layout_gravity="center"
        android:layout_weight=".75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"
        android:textColor="@color/mainColor"
        android:layout_gravity="center"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"
        android:textColor="@color/mainColor"
        android:layout_gravity="center"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:textColor="@color/mainColor"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer3"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp"/>


    <TextView
        android:id="@+id/question4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/question4"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer4"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:layout_weight=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="85dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/mainColor">
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>